--- a/.github/workflows/actions.yaml
+++ b/.github/workflows/actions.yaml
@@ -1,7 +1,9 @@
 name: Actions Workflow
 
 on: 
-  push:
+  # push:
+  schedule:
+    - cron: "* * * *"
   pull_request:
     types: [closed, assigned, opened, reopened]
 
