--- a/.github/workflows/actions.yaml
+++ b/.github/workflows/actions.yaml
@@ -3,7 +3,8 @@ name: Actions Workflow
 on: 
   # push:
   schedule:
-    - cron: "* * * *"
+    - cron: "0/5 * * * *"
+    - cron: "0/6 * * * *"
   pull_request:
     types: [closed, assigned, opened, reopened]
 
